[package]
name = "vsmp"
version = "0.1.0"
authors = ["kiluhabe <kiluhabe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rppal = "0.11.2"
image = "0.22.1"
libc = "0.2.64"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
dirs = "1.0.4"
ctrlc = "3.2.0"
